--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 
         .widget {
             padding: 5px 5px ;
-            color: #cbe9ff;
+            color: #000;
             display: flex;
             justify-content:center;
             align-items:center;
             flex-direction: column;
             max-width: 95%;
             margin: auto;
-            border: 3px solid #cbe9ff;
+            border: 3px solid #000;
             border-radius: 5px;
             box-shadow: 2px 2px 1px 0px #cbe9ff;
 
