--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             margin: auto;
             border: 3px solid #000;
             border-radius: 5px;
-            box-shadow: 2px 2px 1px 0px #cbe9ff;
+            box-shadow: 2px 2px 1px 0px #000;
 
         }
            
