--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ function displayGreetings(today){
         displayGreetings(today);
         displayDate(today);
         displayClock(today);
-        setTimeout(dispalyWidget, 500);
+        setTimeout(displayWidget, 500);
     }
     displayWidget()
 </script>
