--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
 
         .widget {
             padding: 5px 5px ;
-            color: #000;
+            color: #F0EAD6;
             display: flex;
             justify-content:center;
             align-items:center;
             flex-direction: column;
             max-width: 95%;
             margin: auto;
-            border: 3px solid #000;
+            border: 3px solid #F0EAD6;
             border-radius: 5px;
-            box-shadow: 2px 2px 1px 0px #000;
+            box-shadow: 2px 2px 1px 0px #F0EAD6;
 
         }
            
