Update and rename weekly.html to articles.html

--- a/articles.html
+++ b/articles.html
@@ -30,7 +30,7 @@
 <body>
 <div class="container>">
     <div class="widget">
-        <div class="greet" id="greet">WEEKLY TODO </div>
+        <div class="greet" id="greet">ARTICLES </div>
     </div>
 </div>
 
